--- a/app/src/main/res/layout/fragment_project_list_prism4d.xml
+++ b/app/src/main/res/layout/fragment_project_list_prism4d.xml
@@ -1,121 +1,117 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<HorizontalScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools=  "http://schemas.android.com/tools"
     tools:context="com.asc.msigeosystems.prism4d.MainPrism4DActivity"
-    android:layout_width="match_parent"
+
+    android:layout_width= "match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorScreenBackground"
-    android:orientation="vertical"
+    android:fillViewport= "true"
+
+    android:background=   "@color/colorScreenBackground"
+    android:orientation=  "vertical"
     >
 
     <!-- Everything on the screen has to scroll horizontally -->
-    <HorizontalScrollView
-        android:layout_width="match_parent"
+    <!-- rest of the screen -->
+    <LinearLayout
+        android:orientation=  "vertical"
+        android:layout_width= "wrap_content"
         android:layout_height="match_parent"
-        android:fillViewport="true"
         >
-
-        <!-- rest of the screen -->
+        <!-- title line -->
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+            android:orientation=  "horizontal"
+            android:layout_width= "match_parent"
+            android:layout_height="wrap_content"
+
+            android:focusable="false"
+            android:clickable="false"
+
+            android:paddingTop="@dimen/interum_vertical"
+
+            android:background="@color/colorScreenBackground"
             >
-            <!-- title line -->
-            <LinearLayout
 
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+            <!-- ID 3-->
+            <TextView
+                android:text="@string/project_row_id_label"
+
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="3"
 
-                android:focusable="false"
-                android:clickable="false"
+                android:layout_marginEnd="8dp"
 
-                android:paddingTop="@dimen/interum_vertical"
-
+                android:textColor="@color/colorTextBlack"
                 android:background="@color/colorScreenBackground"
-                >
+                />
 
-                <!-- ID 3-->
-                <TextView
-                    android:text="@string/project_row_id_label"
+            <!-- Name 7-->
+            <TextView
+                android:text="@string/project_row_name_label"
 
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="7"
 
-                    android:layout_marginEnd="8dp"
+                android:layout_marginEnd="8dp"
 
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
+                android:textColor="@color/colorTextBlack"
+                android:background="@color/colorScreenBackground"
+                />
 
-                <!-- Name 7-->
-                <TextView
-                    android:text="@string/project_row_name_label"
+            <!-- Date last maintained 5-->
+            <TextView
+                android:text="@string/project_row_last_modified_date_label"
 
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="7"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="5"
 
-                    android:layout_marginEnd="8dp"
+                android:layout_marginEnd="8dp"
 
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
+                android:textColor="@color/colorTextBlack"
+                android:background="@color/colorScreenBackground"
+                />
 
-                <!-- Date last maintained 5-->
-                <TextView
-                    android:text="@string/project_row_last_modified_date_label"
+            <!-- Size = number of points 3-->
+            <TextView
+                android:text="@string/project_row_size_label"
 
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="5"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="3"
 
-                    android:layout_marginEnd="8dp"
+                android:layout_marginEnd="8dp"
 
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
-
-                <!-- Size = number of points 3-->
-                <TextView
-                    android:text="@string/project_row_size_label"
-
-                    android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-
-                    android:layout_marginEnd="8dp"
-
-                    android:textColor="@color/colorTextBlack"
-                    android:background="@color/colorScreenBackground"
-                    />
-            </LinearLayout>
-
-            <!--recycler view for the list of projects-->
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true"
-                >
-
-                <!-- Recycler view containing the list of projects -->
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/projectsList"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
-
-                </android.support.v7.widget.RecyclerView>
-
-            </ScrollView>
-
+                android:textColor="@color/colorTextBlack"
+                android:background="@color/colorScreenBackground"
+                />
         </LinearLayout>
 
-    </HorizontalScrollView>
+        <!--recycler view for the list of projects-->
+        <ScrollView
+            android:layout_width= "match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport= "true"
+            >
+
+            <!-- Recycler view containing the list of projects -->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/projectsList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+            </android.support.v7.widget.RecyclerView>
+
+        </ScrollView>
+
+    </LinearLayout>
 
     <!-- Only buttons in the Footer on the Projects list page -->
-    <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/>
+    <!-- <include layout="@layout/fragment_footer_buttons_inclusion_prism4d"/> -->
 
-</LinearLayout>
+</HorizontalScrollView>
 
